# quantflow

./: .gitignore  CONTRIBUTING.md  NARRATIVE-TRACKER-SPEC.md  README.md  RESEARCH.md  SPEC-FULL.md  SPEC-WEEK.md  docker-compose.yml  start.sh
backend/: Dockerfile  Dockerfile.connector  init-db.sql  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  amihud.py  engine.py  garman_klass.py  hurst.py  kyles_lambda.py  order_book_imbalance.py  order_flow_imbalance.py  parkinson.py  realized_volatility.py  roll_spread.py  spread.py  vpin.py  vwap.py
backend/app/arbitrage/: __init__.py  discrepancy.py  lead_lag.py  models.py  triangular.py
backend/app/connectors/: __init__.py  base.py  binance.py  coinbase.py  kraken.py
backend/app/core/: __init__.py  order_book.py
backend/app/detection/: __init__.py  ai_analyzer.py  alerts.py  base.py  claude_analyzer.py  detectors.py  engine.py  front_running.py  iceberg.py  layering.py  models.py  momentum_ignition.py  spoofing.py  tape_painting.py  walls.py  wash_trading.py
backend/app/models/: __init__.py  market_data.py
backend/app/strategy/: __init__.py  base.py  data_loader.py  models.py  test_backtest.py
backend/app/utils/: __init__.py  websocket.py
backend/tests/: __init__.py  test_detection.py  test_hurst.py  test_obi.py  test_vpin.py  test_vwap.py
backend/tests/benchmarks/: test_performance.py
backend/tests/integration/: test_backtest_validation.py  test_exchange_connectors.py
backend/tests/unit/: test_microstructure_metrics.py  (+1 more)
docs/: API.md  (+1 more)
(+50 files in other folders)
